# fte

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CITATION  MANIFEST.in  README.md  codecov.yml  environment.yml  pyproject.toml  sandbox.ipynb  setup.cfg  tox.ini
.envs/: testenv.yaml
.github/workflows/: main.yml  publish-to-pypi.yaml
docs/: rtd_environment.yml
docs/source/: api.md  changes.md  conf.py  index.md
src/fte/: config.py  covariance_operator.py  utilities.py
src/fte/confidence_bands/: bands.py  roughness.py
src/fte/fitting/: __init__.py  _doubly_robust.py  aipwe.py  compute_nuisance_function.py  doubly_robust.py  fitting.py
src/fte/montypy/: __init__.py  coverage.py  generic.py
src/fte/plotting/: plotting.py
src/fte/sandbox/: simulation.ipynb
src/fte/simulation/: __init__.py  coverage.py  processes.py  simulate.py
tests/: test_covariance_operator.py
tests/confidence_bands/: test_bands.py  test_roughness.py
tests/fitting/: test__doubly_robust.py  test_aipwe.py
tests/montypy/: test_coverage.py  test_generic.py
tests/simulation/: test_coverage.py
