[metadata]
name = functe
description = Estimation of functional treatment effects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/timmens/fte
author = Tim Mensinger
author_email = tmensinger@uni-bonn.de
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/timmens/fte
    Documentation = https://github.com/timmens/fte
    Github = https://github.com/timmens/fte
    Tracker = https://github.com/timmens/fte/issues

[options]
packages = find:
install_requires =
    numpy
    pandas
    pytask
    scikit-learn
    scipy
python_requires = >=3.8
include_package_data = True
package_dir = =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/fte/_version.py
